Fix readability
rating values
rating card

--- a/wiki/static/wiki/styles/start_page_style.css
+++ b/wiki/static/wiki/styles/start_page_style.css
@@ -580,6 +580,8 @@ a {
 
 .card-opened {
   min-height: fit-content;
+  height: fit-content;
+  padding-bottom: 20px;
   cursor: default !important;
 }
 .card-opened img {
